Optimizar templates con best practices category-specific: Eco (ROI/confianza), Tech (specs/minimalismo), Sports (comunidad/historias), Premium (elegancia/detalles)

--- a/ejemplos/template-premium.html
+++ b/ejemplos/template-premium.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plantilla PREMIUM - Amazon Product Page</title>
+    <title>Electrónica Premium & Lujo | Monitor 4K Profesional de Precisión</title>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         * {
@@ -421,14 +421,14 @@
 </head>
 <body>
     <div class="navbar">
-        <div class="navbar-brand">◆ Premium Template</div>
+        <div class="navbar-brand">◆ ELECTRÓNICA PREMIUM & LUJO</div>
         <a class="navbar-link" onclick="history.back()">← Volver</a>
     </div>
 
     <div class="container">
         <div class="product-header">
-            <h1>Monitor 4K Ultra Premium</h1>
-            <p>Resolución 4K • Tecnología HDR • Colores Perfectos para Profesionales</p>
+            <h1>Monitor 4K Ultra Premium - Ingeniería de Precisión</h1>
+            <p>Delta E <2 (Exactitud de color) | 1000 nits HDR | 98.5% DCI-P3 Profesional</p>
         </div>
 
         <div class="product-content">
@@ -438,16 +438,16 @@
                 </div>
                 <div class="thumbnails">
                     <div class="thumbnail">
-                        <img src="https://via.placeholder.com/100x100?text=Frontal" alt="Vista frontal">
+                        <img src="https://via.placeholder.com/100x100?text=Precision" alt="Precisión">
                     </div>
                     <div class="thumbnail">
-                        <img src="https://via.placeholder.com/100x100?text=Lateral" alt="Vista lateral">
+                        <img src="https://via.placeholder.com/100x100?text=Construccion" alt="Construcción">
                     </div>
                     <div class="thumbnail">
-                        <img src="https://via.placeholder.com/100x100?text=Conexiones" alt="Conexiones">
+                        <img src="https://via.placeholder.com/100x100?text=Conectividad" alt="Conectividad">
                     </div>
                     <div class="thumbnail">
-                        <img src="https://via.placeholder.com/100x100?text=Detalle" alt="Detalle">
+                        <img src="https://via.placeholder.com/100x100?text=Detalles" alt="Detalles Premium">
                     </div>
                 </div>
             </div>
@@ -455,96 +455,94 @@
             <div class="product-info">
                 <div class="rating">
                     <div class="stars">★★★★★</div>
-                    <div>5.0/5 (423 reseñas)</div>
+                    <div>5.0/5 (423 profesionales verificados)</div>
                 </div>
 
                 <div class="price-section">
                     <div class="price-label">Precio Exclusivo</div>
                     <div>
                         <span class="price-current">$1,249.99</span>
-                        <span class="discount-badge">-15%</span>
+                        <span class="discount-badge">-15% por tiempo limitado</span>
                     </div>
                     <div class="price-original">Precio usual: $1,470.99</div>
                 </div>
 
                 <div class="buttons">
-                    <button class="btn btn-primary">Adquirir Ahora</button>
-                    <button class="btn btn-secondary">Consulta Técnica</button>
+                    <button class="btn btn-primary">Explorar Especificaciones Premium</button>
+                    <button class="btn btn-secondary">Consulta Técnica Gratuita</button>
                 </div>
 
                 <div class="features">
-                    <h3>Características de Lujo</h3>
+                    <h3>Especificaciones Refinadas de Lujo</h3>
                     <ul>
-                        <li><strong>Resolución 4K (3840x2160):</strong> Claridad absoluta pixel-perfect</li>
-                        <li><strong>Espacio de Color DCI-P3:</strong> 98.5% cobertura profesional</li>
-                        <li><strong>Panel IPS Calibrado:</strong> Ángulos de visión 178° sin distorsión</li>
-                        <li><strong>HDR Premium:</strong> 1000 nits de brillo máximo</li>
-                        <li><strong>USB-C 90W:</strong> Alimentación y conexión unificada</li>
+                        <li><strong>Especificaciones de Precisión Extrema:</strong> Delta E <2 • 4K 3840x2160 • 1000 nits HDR</li>
+                        <li><strong>Detalles de Construcción Premium:</strong> Panel IPS Nanodot • Chasis aluminio CNC • Cableado integrado</li>
+                        <li><strong>Minimalismo Elegante + Enfoque Visual:</strong> Bisel infinito • Frame rate adaptable • Calibración automática</li>
                     </ul>
                 </div>
             </div>
         </div>
 
         <div class="full-description">
-            <h2>Experiencia Visual de Lujo</h2>
+            <h2>Precisión Visual Suprema</h2>
             
             <p>
-                El <strong>Monitor 4K Ultra Premium</strong> redefine los estándares de calidad visual profesional. 
-                Diseñado para fotógrafos, diseñadores gráficos y productores de video que exigen lo mejor, 
-                cada píxel ha sido calibrado para perfección absoluta.
+                El <strong>Monitor 4K Ultra Premium</strong> representa la máxima expresión en ingeniería visual. 
+                Diseñado para profesionales que demandan precisión absoluta: fotógrafos, diseñadores gráficos, 
+                coloristas de cine y productores de contenido que comprenden que la calidad visual es rentabilidad.
             </p>
 
             <p>
-                <strong>Un Instrumento de Precisión:</strong> Con certificación Pantone Validated y calibración 
-                Delta E menor a 2, este monitor garantiza color exacto. Sus paneles IPS de última generación 
-                ofrecen ángulos de visión imposibles y reproducción de color sin compromisos.
+                <strong>Maestría en Cada Detalle:</strong> Certificado Pantone Validated con Delta E <2 (imperceptible al ojo humano). 
+                Panel IPS Nanodot con ángulos imposibles de 178°, chasis de aluminio CNC de precisión suiza, 
+                y calibración automática con luz ambiental inteligente. Cada componente ha sido seleccionado para excelencia extrema.
             </p>
 
-            <h3>Especificaciones Técnicas Profesionales</h3>
+            <h3>Especificaciones Técnicas Refinadas</h3>
             <table class="specs-table">
                 <tr>
                     <th>Especificación</th>
-                    <th>Detalle</th>
+                    <th>Detalle Premium</th>
                 </tr>
                 <tr>
-                    <td>Resolución</td>
-                    <td>4K (3840 x 2160 píxeles)</td>
+                    <td>Resolución Ultra</td>
+                    <td>4K (3840 x 2160 píxeles) • 163 PPI</td>
                 </tr>
                 <tr>
-                    <td>Tamaño de Pantalla</td>
-                    <td>27 pulgadas</td>
+                    <td>Pantalla Profesional</td>
+                    <td>27" IPS Quantum Dot Pro • Bisel infinito</td>
                 </tr>
                 <tr>
-                    <td>Tecnología Panel</td>
-                    <td>IPS Quantum Dot Pro</td>
+                    <td>Precisión de Color</td>
+                    <td>Delta E <2 • DCI-P3 98.5% • Validated Pantone</td>
                 </tr>
                 <tr>
-                    <td>Espacio de Color</td>
-                    <td>DCI-P3 98.5%</td>
+                    <td>Rendimiento Visual</td>
+                    <td>1000 nits HDR • Contraste 1000:1 • 4ms respuesta</td>
                 </tr>
                 <tr>
-                    <td>Tiempo de Respuesta</td>
-                    <td>4ms (gris a gris)</td>
+                    <td>Conectividad Integrada</td>
+                    <td>USB-C 90W + Thunderbolt 3 + DisplayPort + HDMI 2.1</td>
                 </tr>
                 <tr>
-                    <td>Conectividad</td>
-                    <td>USB-C 90W + Thunderbolt 3 + DisplayPort</td>
+                    <td>Construcción Premium</td>
+                    <td>Aluminio CNC de precisión suiza • Cableado integrado • Sistema ergonómico avanzado</td>
                 </tr>
                 <tr>
-                    <td>Garantía</td>
-                    <td>3 años completa + soporte premium</td>
+                    <td>Garantía Completa</td>
+                    <td>3 años + soporte técnico 24/7 + calibración anual</td>
                 </tr>
             </table>
 
             <div class="luxury-badge">
-                ◆ Certificado Pantone Validated • Calibración Profesional Incluida • Soporte 24/7
+                ◆ Certificado Pantone Validated • Calibración Profesional Incluida • Soporte Premium 24/7 • Transferible
             </div>
 
-            <h3>Contenido del Paquete</h3>
+            <h3>Experiencia Completa Profesional</h3>
             <p>
-                Monitor 4K Ultra Premium • Cable DisplayPort • Cable USB-C Thunderbolt 3 • 
-                Soporte ergonómico premium • Documentación técnica • Certificado de calibración • 
-                Acceso a software de configuración profesional • Garantía 3 años
+                Monitor 4K Ultra Premium • Cable DisplayPort certified • Cable USB-C Thunderbolt 3 certificado • 
+                Soporte ergonómico premium ajustable • Documentación técnica profesional • Certificado de calibración de fábrica • 
+                Acceso a software ColorLogic de configuración avanzada • Garantía 3 años transferible + soporte premium
             </p>
         </div>
 
