--- a/ejemplos/template-sport.html
+++ b/ejemplos/template-sport.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plantilla SPORT - Amazon Product Page</title>
+    <title>Equipamiento Deportivo + Comunidad | Historias de Atletas Reales</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&display=swap" rel="stylesheet">
     <style>
         * {
@@ -411,14 +411,14 @@
 </head>
 <body>
     <div class="navbar">
-        <div class="navbar-brand">🔥 Sport Template</div>
+        <div class="navbar-brand">⚡ EQUIPAMIENTO DEPORTIVO + COMUNIDAD</div>
         <a class="navbar-link" onclick="history.back()">← Volver</a>
     </div>
 
     <div class="container">
         <div class="product-header">
-            <h1>Zapatillas Running Pro X</h1>
-            <p>Tecnología Deportiva de Élite • Rendimiento Máximo • Comodidad Extrema</p>
+            <h1>Zapatillas Running Pro X - Tecnología de Campeones</h1>
+            <p>Usadas por atletas profesionales | Comunidad de 50K+ corredores | Desafío de 10K incluido</p>
         </div>
 
         <div class="product-content">
@@ -428,16 +428,16 @@
                 </div>
                 <div class="thumbnails">
                     <div class="thumbnail">
-                        <img src="https://via.placeholder.com/100x100?text=Lateral" alt="Vista lateral">
+                        <img src="https://via.placeholder.com/100x100?text=Tecnologia" alt="Tecnología">
                     </div>
                     <div class="thumbnail">
-                        <img src="https://via.placeholder.com/100x100?text=Superior" alt="Vista superior">
+                        <img src="https://via.placeholder.com/100x100?text=Atletas" alt="Atletas">
                     </div>
                     <div class="thumbnail">
-                        <img src="https://via.placeholder.com/100x100?text=Suela" alt="Suela">
+                        <img src="https://via.placeholder.com/100x100?text=Comunidad" alt="Comunidad">
                     </div>
                     <div class="thumbnail">
-                        <img src="https://via.placeholder.com/100x100?text=Uso" alt="En uso">
+                        <img src="https://via.placeholder.com/100x100?text=Desafio" alt="Desafío">
                     </div>
                 </div>
             </div>
@@ -445,7 +445,7 @@
             <div class="product-info">
                 <div class="rating">
                     <div class="stars">★★★★★</div>
-                    <div>4.9/5 (1,247 reseñas)</div>
+                    <div>4.9/5 (1,247 atletas verificados)</div>
                 </div>
 
                 <div class="price-section">
@@ -458,49 +458,47 @@
                 </div>
 
                 <div class="buttons">
-                    <button class="btn btn-primary">⚡ COMPRAR AHORA</button>
-                    <button class="btn btn-secondary">❤️ FAVORITOS</button>
+                    <button class="btn btn-primary">🏃 VER HISTORIAS DE ATLETAS</button>
+                    <button class="btn btn-secondary">👥 UNIRSE A LA COMUNIDAD</button>
                 </div>
 
                 <div class="features">
-                    <h3>⚡ CARACTERÍSTICAS EXPLOSIVAS</h3>
+                    <h3>⚡ POR QUÉ ELIGEN ESTOS ZAPATILLAS</h3>
                     <ul>
-                        <li><strong>Espuma ReactiveFlow:</strong> 40% más rebote que la competencia</li>
-                        <li><strong>Peso Ultra Ligero:</strong> Solo 195g para máxima velocidad</li>
-                        <li><strong>Amortiguación Inteligente:</strong> Se adapta a tu pisada en tiempo real</li>
-                        <li><strong>Suela Duradera:</strong> 500km de resistencia garantizados</li>
-                        <li><strong>Transpirabilidad Premium:</strong> Tela de malla 3D con ventilación extrema</li>
+                        <li><strong>Testimonios de Atletas Verificados:</strong> Historias reales de corredores con PRs documentados</li>
+                        <li><strong>Tabla de Rendimiento + Desafíos:</strong> Comparte tus tiempos, compite en la app</li>
+                        <li><strong>Videos de Movimiento + User-Generated Content:</strong> Cómo otras personas corren en estos zapatos</li>
                     </ul>
                 </div>
             </div>
         </div>
 
         <div class="full-description">
-            <h2>🏃 DESCRIPCIÓN DEL PRODUCTO</h2>
+            <h2>🏃 ENERGÍA, COMUNIDAD, HISTORIAS REALES</h2>
             
             <p>
-                <strong>Zapatillas Running Pro X</strong> - Las zapatillas elegidas por atletas profesionales en todo el mundo. 
-                Con tecnología de vanguardia y diseño ergonómico extremo, son perfectas para maratones, entrenamientos intensos 
-                o tu carrera matutina.
+                <strong>Zapatillas Running Pro X</strong> - Elegidas por 50K+ corredores en todo el mundo, cada una con historias de logros verificados. 
+                Con tecnología de vanguardia y diseño ergonómico extremo, son perfectas para competencia, entrenamientos de élite 
+                o transformar tu carrera personal.
             </p>
 
             <p>
-                <strong>¿POR QUÉ SOMOS LOS MEJORES?</strong> Porque combinamos 20 años de experiencia en running, investigación 
-                biomecánica de clase mundial y feedback directo de atletas Olímpicos. Cada detalle está diseñado para potenciar 
-                tu rendimiento al máximo.
+                <strong>MÁS QUE ZAPATILLAS - ES UNA COMUNIDAD:</strong> Conecta con otros atletas, comparte tus tiempos, participa en desafíos 
+                mensuales con premios, accede a planes de entrenamiento de élite. Cada compra incluye 6 meses gratis de acceso a la app premium 
+                con tablas de rendimiento, análisis de datos y feedback de entrenadores certificados.
             </p>
 
             <div class="highlight-box">
-                <p>⚡ 40% MÁS REBOTE • 25% MÁS RÁPIDO • 500KM DE DURABILIDAD • GARANTÍA 2 AÑOS</p>
+                <p>⚡ VIDEOS DE MOVIMIENTO • 50K+ ATLETAS VERIFICADOS • COMUNIDAD CON DESAFÍOS MENSUALES • GARANTÍA 2 AÑOS + APP GRATIS</p>
             </div>
 
-            <h3 style="margin-top: 30px; margin-bottom: 15px; font-weight: 800; text-transform: uppercase;">📊 ESPECIFICACIONES TÉCNICAS</h3>
-            <p><strong>Peso:</strong> 195g (talla 42) | <strong>Drop:</strong> 8mm | <strong>Durabilidad:</strong> 500km</p>
-            <p><strong>Material Superior:</strong> Mesh 3D + Sintético de Alto Rendimiento | <strong>Suela:</strong> Caucho Continental</p>
-            <p><strong>Amortiguación:</strong> ReactiveFlow Foam + Sistema de Micro Air | <strong>Certificación:</strong> A+ Running Podium</p>
+            <h3 style="margin-top: 30px; margin-bottom: 15px; font-weight: 800; text-transform: uppercase;">📊 TECNOLOGÍA DE RENDIMIENTO</h3>
+            <p><strong>Peso:</strong> 195g (talla 42) | <strong>Drop:</strong> 8mm biomecánico | <strong>Durabilidad:</strong> 500km certificados</p>
+            <p><strong>Espuma Reactiva:</strong> 40% más rebote que competencia | <strong>Suela:</strong> Caucho Continental tracción extrema</p>
+            <p><strong>Certificación:</strong> Usadas por atletas olímpicos • App de análisis de rendimiento incluida • Comunidad de entrenadores</p>
 
-            <h3 style="margin-top: 30px; margin-bottom: 15px; font-weight: 800; text-transform: uppercase;">📦 QUÉ INCLUYE</h3>
-            <p>✓ Zapatillas Running Pro X • ✓ Plantilla ortopédica premium • ✓ Cordones reflectantes • ✓ Bolsa de transporte deportiva • ✓ Garantía 2 años</p>
+            <h3 style="margin-top: 30px; margin-bottom: 15px; font-weight: 800; text-transform: uppercase;">📦 EXPERIENCIA COMPLETA INCLUYE</h3>
+            <p>✓ Zapatillas Running Pro X • ✓ Plantilla ortopédica premium • ✓ Cordones reflectantes • ✓ Acceso 6 meses app de comunidad • ✓ Entrada a desafíos mensuales • ✓ Garantía 2 años</p>
         </div>
 
         <div class="footer">
