--- a/index.html
+++ b/index.html
@@ -3980,7 +3980,7 @@
             <div class="section-header">
                 <span class="eyebrow" style="display: inline-block;">Ejemplos de Trabajo</span>
                 <h2 style="font-family: var(--font-family-serif); font-size: 56px; font-weight: 900; letter-spacing: -0.015em;">Templates Personalizados para Categorías</h2>
-                <p style="font-size: 18px; line-height: 1.6;">Diseños adaptados a diferentes industrias con metodología UX/UI centrada en conversión</p>
+                <p style="font-size: 18px; line-height: 1.6;">Diseños estratégicos basados en mejores prácticas UX/UI de cada industria: ROI para energía, specs para tech, comunidad para deportes, lujo para premium</p>
             </div>
             
             <div class="templates-grid">
@@ -3993,15 +3993,15 @@
                     </div>
                     <div class="template-content">
                         <div class="template-category"><svg class="icon icon-sm icon-gold" viewBox="0 0 24 24"><path d="M12 22c4.97-2.23 8-6.06 8-11 0-2.5-1-5-3-7-3 1-5 3-5 7"></path><path d="M6 12c1.5 1.2 3 2 4 2"></path><path d="M10 22c0-7-2-10-6-12"></path></svg><span>GREEN/ECO</span></div>
-                        <h3 class="template-title">Template Productos Ecológicos</h3>
+                        <h3 class="template-title">Soluciones Energéticas Sostenibles</h3>
                         <div class="template-stats">
                             <div class="stat"><svg class="icon icon-sm icon-gold" viewBox="0 0 24 24"><polygon points="12 2 15.09 10.26 24 10.26 17.45 15.27 20.55 23 12 18 3.45 23 6.55 15.27 0 10.26 8.91 10.26 12 2"></polygon></svg><span>4.9/5</span></div>
                             <div class="stat"><svg class="icon icon-sm icon-gold" viewBox="0 0 24 24"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="9" cy="7" r="4"></circle><path d="M23 21v-2a4 4 0 0 0-3-3.87"></path><path d="M16 3.13a4 4 0 0 1 0 7.75"></path></svg><span>87 ventas</span></div>
                         </div>
                         <ul class="template-features">
-                            <li><svg class="icon icon-sm icon-gold" viewBox="0 0 24 24"><polyline points="20 6 9 17 4 12"></polyline></svg><span>Diseño sustentable y natural</span></li>
-                            <li><svg class="icon icon-sm icon-gold" viewBox="0 0 24 24"><polyline points="20 6 9 17 4 12"></polyline></svg><span>Optimizado para energía/orgánico</span></li>
-                            <li><svg class="icon icon-sm icon-gold" viewBox="0 0 24 24"><polyline points="20 6 9 17 4 12"></polyline></svg><span>Incluye landing page</span></li>
+                            <li><svg class="icon icon-sm icon-gold" viewBox="0 0 24 24"><polyline points="20 6 9 17 4 12"></polyline></svg><span>Sección de ROI / Ahorro anual</span></li>
+                            <li><svg class="icon icon-sm icon-gold" viewBox="0 0 24 24"><polyline points="20 6 9 17 4 12"></polyline></svg><span>Certificaciones y garantías destacadas</span></li>
+                            <li><svg class="icon icon-sm icon-gold" viewBox="0 0 24 24"><polyline points="20 6 9 17 4 12"></polyline></svg><span>Testimonios locales + landing educativa</span></li>
                         </ul>
                         <div class="template-price">
                             <span class="price-new" style="font-size: 18px;">Precio según Proyecto</span>
@@ -4022,15 +4022,15 @@
                     </div>
                     <div class="template-content">
                         <div class="template-category"><svg class="icon icon-sm icon-gold" viewBox="0 0 24 24"><rect x="3" y="3" width="18" height="18" rx="3"></rect><path d="M7 7h10v10H7z"></path><path d="M10 3v4"></path><path d="M14 17v4"></path><path d="M3 10h4"></path><path d="M17 14h4"></path></svg><span>TECH/MODERN</span></div>
-                        <h3 class="template-title">Template Gadgets y Tecnología</h3>
+                        <h3 class="template-title">Wearables & Gadgets Premium</h3>
                         <div class="template-stats">
                             <div class="stat"><svg class="icon icon-sm icon-gold" viewBox="0 0 24 24"><polygon points="12 2 15.09 10.26 24 10.26 17.45 15.27 20.55 23 12 18 3.45 23 6.55 15.27 0 10.26 8.91 10.26 12 2"></polygon></svg><span>5.0/5</span></div>
                             <div class="stat"><svg class="icon icon-sm icon-gold" viewBox="0 0 24 24"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="9" cy="7" r="4"></circle><path d="M23 21v-2a4 4 0 0 0-3-3.87"></path><path d="M16 3.13a4 4 0 0 1 0 7.75"></path></svg><span>64 ventas</span></div>
                         </div>
                         <ul class="template-features">
-                            <li><svg class="icon icon-sm icon-gold" viewBox="0 0 24 24"><polyline points="20 6 9 17 4 12"></polyline></svg><span>Diseño tech minimalista</span></li>
-                            <li><svg class="icon icon-sm icon-gold" viewBox="0 0 24 24"><polyline points="20 6 9 17 4 12"></polyline></svg><span>Ideal wearables y gadgets</span></li>
-                            <li><svg class="icon icon-sm icon-gold" viewBox="0 0 24 24"><polyline points="20 6 9 17 4 12"></polyline></svg><span>Incluye landing page</span></li>
+                            <li><svg class="icon icon-sm icon-gold" viewBox="0 0 24 24"><polyline points="20 6 9 17 4 12"></polyline></svg><span>Especificaciones técnicas detalladas</span></li>
+                            <li><svg class="icon icon-sm icon-gold" viewBox="0 0 24 24"><polyline points="20 6 9 17 4 12"></polyline></svg><span>Comparativas visuales + feature showcase</span></li>
+                            <li><svg class="icon icon-sm icon-gold" viewBox="0 0 24 24"><polyline points="20 6 9 17 4 12"></polyline></svg><span>Futurista minimalista + integración ecosistema</span></li>
                         </ul>
                         <div class="template-price">
                             <span class="price-new" style="font-size: 18px;">Precio según Proyecto</span>
@@ -4051,15 +4051,15 @@
                     </div>
                     <div class="template-content">
                         <div class="template-category"><svg class="icon icon-sm icon-gold" viewBox="0 0 24 24"><path d="M12 2s3 4 3 7a3 3 0 0 1-6 0c0-3 3-7 3-7Z"></path><path d="M12 13a5 5 0 0 1 5 5c0 2.5-2 4-5 4s-5-1.5-5-4a5 5 0 0 1 5-5Z"></path></svg><span>SPORTS/DYNAMIC</span></div>
-                        <h3 class="template-title">Template Deportes y Fitness</h3>
+                        <h3 class="template-title">Equipamiento Deportivo + Comunidad</h3>
                         <div class="template-stats">
                             <div class="stat"><svg class="icon icon-sm icon-gold" viewBox="0 0 24 24"><polygon points="12 2 15.09 10.26 24 10.26 17.45 15.27 20.55 23 12 18 3.45 23 6.55 15.27 0 10.26 8.91 10.26 12 2"></polygon></svg><span>4.8/5</span></div>
                             <div class="stat"><svg class="icon icon-sm icon-gold" viewBox="0 0 24 24"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="9" cy="7" r="4"></circle><path d="M23 21v-2a4 4 0 0 0-3-3.87"></path><path d="M16 3.13a4 4 0 0 1 0 7.75"></path></svg><span>92 ventas</span></div>
                         </div>
                         <ul class="template-features">
-                            <li><svg class="icon icon-sm icon-gold" viewBox="0 0 24 24"><polyline points="20 6 9 17 4 12"></polyline></svg><span>Diseño energético y dinámico</span></li>
-                            <li><svg class="icon icon-sm icon-gold" viewBox="0 0 24 24"><polyline points="20 6 9 17 4 12"></polyline></svg><span>Perfecto para deportes/fitness</span></li>
-                            <li><svg class="icon icon-sm icon-gold" viewBox="0 0 24 24"><polyline points="20 6 9 17 4 12"></polyline></svg><span>Incluye landing page</span></li>
+                            <li><svg class="icon icon-sm icon-gold" viewBox="0 0 24 24"><polyline points="20 6 9 17 4 12"></polyline></svg><span>Colores vibrantes + historias de atletas</span></li>
+                            <li><svg class="icon icon-sm icon-gold" viewBox="0 0 24 24"><polyline points="20 6 9 17 4 12"></polyline></svg><span>Tecnología de producto + comunidad/desafíos</span></li>
+                            <li><svg class="icon icon-sm icon-gold" viewBox="0 0 24 24"><polyline points="20 6 9 17 4 12"></polyline></svg><span>Videos de movimiento + user-generated content</span></li>
                         </ul>
                         <div class="template-price">
                             <span class="price-new" style="font-size: 18px;">Precio según Proyecto</span>
@@ -4080,15 +4080,15 @@
                     </div>
                     <div class="template-content">
                         <div class="template-category"><svg class="icon icon-sm icon-gold" viewBox="0 0 24 24"><rect x="4" y="4" width="16" height="16" rx="4"></rect><path d="M8 12h8"></path><path d="M12 8v8"></path></svg><span>PRO/MINIMAL</span></div>
-                        <h3 class="template-title">Template Productos Premium</h3>
+                        <h3 class="template-title">Electrónica Premium & Lujo</h3>
                         <div class="template-stats">
                             <div class="stat"><svg class="icon icon-sm icon-gold" viewBox="0 0 24 24"><polygon points="12 2 15.09 10.26 24 10.26 17.45 15.27 20.55 23 12 18 3.45 23 6.55 15.27 0 10.26 8.91 10.26 12 2"></polygon></svg><span>4.9/5</span></div>
                             <div class="stat"><svg class="icon icon-sm icon-gold" viewBox="0 0 24 24"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="9" cy="7" r="4"></circle><path d="M23 21v-2a4 4 0 0 0-3-3.87"></path><path d="M16 3.13a4 4 0 0 1 0 7.75"></path></svg><span>73 ventas</span></div>
                         </div>
                         <ul class="template-features">
-                            <li><svg class="icon icon-sm icon-gold" viewBox="0 0 24 24"><polyline points="20 6 9 17 4 12"></polyline></svg><span>Diseño elegante y profesional</span></li>
-                            <li><svg class="icon icon-sm icon-gold" viewBox="0 0 24 24"><polyline points="20 6 9 17 4 12"></polyline></svg><span>Ideal electrónica premium</span></li>
-                            <li><svg class="icon icon-sm icon-gold" viewBox="0 0 24 24"><polyline points="20 6 9 17 4 12"></polyline></svg><span>Incluye landing page</span></li>
+                            <li><svg class="icon icon-sm icon-gold" viewBox="0 0 24 24"><polyline points="20 6 9 17 4 12"></polyline></svg><span>Especificaciones refinadas + materiales premium</span></li>
+                            <li><svg class="icon icon-sm icon-gold" viewBox="0 0 24 24"><polyline points="20 6 9 17 4 12"></polyline></svg><span>Casos de uso profesionales + comparativas sutiles</span></li>
+                            <li><svg class="icon icon-sm icon-gold" viewBox="0 0 24 24"><polyline points="20 6 9 17 4 12"></polyline></svg><span>Minimalismo elegante + enfoque visual</span></li>
                         </ul>
                         <div class="template-price">
                             <span class="price-new" style="font-size: 18px;">Precio según Proyecto</span>
