--- a/ejemplos/template-eco.html
+++ b/ejemplos/template-eco.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plantilla ECO - Amazon Product Page</title>
+    <title>Soluciones Energéticas Sostenibles | ROI de Energía Renovable</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
         * {
@@ -361,14 +361,14 @@
 </head>
 <body>
     <div class="navbar">
-        <div class="navbar-brand">🌿 Eco Template</div>
+        <div class="navbar-brand">⚡ Soluciones Energéticas Sostenibles</div>
         <a class="navbar-link" onclick="history.back()">← Volver</a>
     </div>
 
     <div class="container">
         <div class="product-header">
-            <h1>Paneles Solares Portátiles Eco</h1>
-            <p>Energía 100% Renovable para tu Hogar • Sustentable y Eficiente</p>
+            <h1>Paneles Solares de Última Generación</h1>
+            <p>ROI garantizado en 5-7 años | Certificado ISO 14001 | Garantía 25 años</p>
         </div>
 
         <div class="product-content">
@@ -378,16 +378,16 @@
                 </div>
                 <div class="thumbnails">
                     <div class="thumbnail">
-                        <img src="https://via.placeholder.com/100x100?text=Vista+1" alt="Vista 1">
-                    </div>
-                    <div class="thumbnail">
-                        <img src="https://via.placeholder.com/100x100?text=Vista+2" alt="Vista 2">
-                    </div>
-                    <div class="thumbnail">
-                        <img src="https://via.placeholder.com/100x100?text=Vista+3" alt="Vista 3">
+                        <img src="https://via.placeholder.com/100x100?text=Eficiencia+95%" alt="Eficiencia">
                     </div>
                     <div class="thumbnail">
                         <img src="https://via.placeholder.com/100x100?text=Instalacion" alt="Instalación">
+                    </div>
+                    <div class="thumbnail">
+                        <img src="https://via.placeholder.com/100x100?text=Detalles" alt="Detalles">
+                    </div>
+                    <div class="thumbnail">
+                        <img src="https://via.placeholder.com/100x100?text=Certificados" alt="Certificados">
                     </div>
                 </div>
             </div>
@@ -395,59 +395,57 @@
             <div class="product-info">
                 <div class="rating">
                     <div class="stars">★★★★★</div>
-                    <div>4.9/5 (347 reseñas)</div>
+                    <div>4.9/5 (347 reseñas de clientes)</div>
                 </div>
 
                 <div class="price-section">
-                    <div class="price-label">Precio</div>
+                    <div class="price-label">Inversión Inicial</div>
                     <div>
-                        <span class="price-current">$299.99</span>
-                        <span class="discount-badge">-30%</span>
+                        <span class="price-current">$3,499</span>
+                        <span class="discount-badge">Retorna en 5-7 años</span>
                     </div>
-                    <div class="price-original">Precio original: $429.99</div>
+                    <div class="price-original">Ahorro anual estimado: $600-$900</div>
                 </div>
 
                 <div class="buttons">
-                    <button class="btn btn-primary">🛒 Comprar Ahora</button>
-                    <button class="btn btn-secondary">❤️ Favoritos</button>
+                    <button class="btn btn-primary">📊 Calcular Mi Ahorro Anual</button>
+                    <button class="btn btn-secondary">📋 Solicitar Análisis Técnico Gratis</button>
                 </div>
 
                 <div class="features">
-                    <h3>✓ Características Principales</h3>
+                    <h3>✓ Por Qué Elegir Esta Solución</h3>
                     <ul>
-                        <li><strong>100% Energía Renovable:</strong> Reduce tu huella de carbono hasta 40%</li>
-                        <li><strong>Eficiencia Solar:</strong> Convertidor de última generación con 95% eficiencia</li>
-                        <li><strong>Fácil Instalación:</strong> Montaje en 30 minutos sin herramientas especiales</li>
-                        <li><strong>Garantía 25 Años:</strong> Cobertura completa contra defectos</li>
-                        <li><strong>Impacto Ambiental:</strong> Certificado ISO 14001 - Totalmente reciclable</li>
+                        <li><strong>Sección ROI Interactiva:</strong> Calcula exactamente tu ahorro según tu ubicación y consumo</li>
+                        <li><strong>Certificaciones Internacionales:</strong> ISO 14001, TÜV, IEC 61215 - máximo estándar</li>
+                        <li><strong>Testimonios Locales Verificados:</strong> Clientes reales con números documentados de ahorro</li>
                     </ul>
                 </div>
             </div>
         </div>
 
         <div class="full-description">
-            <h2>Descripción Completa</h2>
+            <h2>¿Por Qué Invertir en Energía Solar Ahora?</h2>
             
             <p>
-                Nuestros <strong>Paneles Solares Portátiles Eco</strong> son la solución perfecta para familias conscientes del medio ambiente 
-                que desean reducir su dependencia de energía convencional. Con tecnología de vanguardia y diseño sostenible, ofrecen 
-                un retorno de inversión en solo 5-7 años.
+                La inversión en energía renovable no es solo ambientalmente responsable, es <strong>financieramente inteligente</strong>. 
+                Nuestros sistemas generan ROI verificable con ahorros documentados de $600-$900 anuales, garantía de 25 años 
+                y aprobación de todas las certificaciones internacionales de calidad.
             </p>
 
             <p>
-                <strong>¿Por qué elegir nuestro producto?</strong> Porque combinamos eficiencia energética, durabilidad excepcional 
-                y un compromiso genuino con el planeta. Cada panel está fabricado con materiales reciclables y produce un 40% más 
-                de energía que modelos competidores en condiciones de luz débil.
+                <strong>Tecnología comprobada:</strong> 95% eficiencia en conversión de energía, funcionamiento en condiciones 
+                de baja luz, y durabilidad extrema certificada en laboratorios independientes. Cada sistema incluye monitoreo 
+                en tiempo real para que veas exactamente cuánto dinero estás ahorrando.
             </p>
 
             <div class="warranty-badge">
-                <h4>🌍 Compromiso Ambiental</h4>
-                <p>Plantar 1 árbol por cada unidad vendida | Carbono Neutral en producción | 100% reciclables</p>
+                <h4>🏆 Certificaciones Internacionales</h4>
+                <p>ISO 14001 (Medio Ambiente) | TÜV (Seguridad) | IEC 61215 (Rendimiento Solar) | Cobertura 25 Años</p>
             </div>
 
-            <h3 style="margin-top: 30px; margin-bottom: 15px;">Especificaciones Técnicas</h3>
-            <p><strong>Potencia:</strong> 400W • <strong>Voltaje:</strong> 48V • <strong>Temperatura:</strong> -40 a +85°C</p>
-            <p><strong>Peso:</strong> 18kg • <strong>Dimensiones:</strong> 200x100x3.5cm • <strong>Garantía:</strong> 25 años</p>
+            <h3 style="margin-top: 30px; margin-bottom: 15px;">Especificaciones Técnicas de Rendimiento</h3>
+            <p><strong>Potencia Máxima:</strong> 400W • <strong>Eficiencia de Celda:</strong> 23.5% (líder en industria) • <strong>Rango de Operación:</strong> -40 a +85°C</p>
+            <p><strong>Durabilidad:</strong> 25 años garantizados • <strong>Warranty:</strong> 100% transferible • <strong>Degradación:</strong> Solo 0.5% anual</p>
         </div>
 
         <div class="footer">
