Agregar botón 'Volver a demos' en navegación de template-eco.html

--- a/ejemplos/template-eco.html
+++ b/ejemplos/template-eco.html
@@ -79,6 +79,29 @@
             gap: 24px;
         }
 
+        .nav-back {
+            background: transparent;
+            color: #374151;
+            border: 1px solid #d1d5db;
+            padding: 10px 20px;
+            border-radius: 6px;
+            cursor: pointer;
+            font-weight: 600;
+            font-size: 13px;
+            transition: all 0.3s;
+            text-decoration: none;
+            display: inline-flex;
+            align-items: center;
+            gap: 8px;
+            font-family: 'Inter', sans-serif;
+        }
+
+        .nav-back:hover {
+            background: #f3f4f6;
+            border-color: #ffc107;
+            color: #1f2937;
+        }
+
         .nav-phone {
             color: #1f2937;
             font-weight: 600;
@@ -779,6 +802,7 @@
             </div>
             <div class="nav-right">
                 <a href="tel:+18006566796" class="nav-phone">1-800-SUNRUN-1</a>
+                <a href="../index.html#templates-section" class="nav-back">← Volver a demos</a>
                 <button class="nav-cta">GET QUOTE</button>
             </div>
         </nav>
