--- a/index.html
+++ b/index.html
@@ -2905,22 +2905,11 @@
         <div style="max-width: 1200px; margin: 0 auto;">
             <!-- QUIÉN SOY -->
             <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 50px; align-items: center; margin-bottom: 80px;">
-                <!-- Foto -->
+                <!-- Foto Real -->
                 <div style="text-align: center;">
                     <div style="width: 320px; height: 320px; margin: 0 auto; background: linear-gradient(135deg, rgba(164,210,244,0.2), rgba(164,210,244,0.05)); border-radius: 24px; overflow: hidden; box-shadow: 0 20px 50px rgba(46,58,70,0.15); display: flex; align-items: center; justify-content: center;">
-                        <svg style="width: 100%; height: 100%; display: block;" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-                            <defs>
-                                <linearGradient id="avatarGrad" x1="0%" y1="0%" x2="100%" y2="100%">
-                                    <stop offset="0%" style="stop-color:#A4D2F4;stop-opacity:1" />
-                                    <stop offset="100%" style="stop-color:#DFF1FF;stop-opacity:1" />
-                                </linearGradient>
-                            </defs>
-                            <circle cx="100" cy="100" r="100" fill="url(#avatarGrad)"/>
-                            <circle cx="100" cy="70" r="30" fill="#0D3B66" opacity="0.8"/>
-                            <ellipse cx="100" cy="140" rx="45" ry="50" fill="#0D3B66" opacity="0.7"/>
-                        </svg>
+                        <img src="foto.jpg" alt="David Sebastián Díaz - UX/Product Designer" style="width: 100%; height: 100%; object-fit: cover;" />
                     </div>
-                    <p style="font-size: 13px; color: var(--texto-terciario); margin-top: 16px;">👤 Foto disponible en portfolio</p>
                 </div>
                 <!-- Bio -->
                 <div>
