--- a/index.html
+++ b/index.html
@@ -2767,7 +2767,7 @@
     <!-- HEADER -->
     <header class="header" role="banner">
         <div class="header-content">
-            <div class="logo" aria-label="David Díaz - UX/Product Designer"><svg class="icon icon-md" viewBox="0 0 32 32" aria-hidden="true"><defs><linearGradient id="logoGrad1" x1="0%" y1="0%" x2="100%" y2="100%"><stop offset="0%" style="stop-color:#A4D2F4;stop-opacity:1" /><stop offset="100%" style="stop-color:#7CB8E8;stop-opacity:1" /></linearGradient><linearGradient id="logoGrad2" x1="100%" y1="0%" x2="0%" y2="100%"><stop offset="0%" style="stop-color:#A4D2F4;stop-opacity:0.7" /><stop offset="100%" style="stop-color:#5A9FD4;stop-opacity:1" /></linearGradient></defs><g><path d="M 6 8 L 10 5 L 14 8 L 10 11 Z" fill="url(#logoGrad1)" /><path d="M 10 11 L 14 8 L 14 18 L 10 21 Z" fill="url(#logoGrad2)" /><path d="M 18 8 L 22 5 L 26 8 L 22 11 Z" fill="url(#logoGrad1)" opacity="0.9" /><path d="M 22 11 L 26 8 L 26 18 L 22 21 Z" fill="#A4D2F4" opacity="0.5" /><path d="M 10 11 L 14 8 L 22 11 L 18 14 Z" fill="#0D3B66" opacity="0.08" /></g></svg>David Díaz<svg style="width: 16px; height: 16px; margin-left: 6px; fill: var(--acento-principal); filter: drop-shadow(0 2px 6px rgba(164,210,244,0.4));" viewBox="0 0 24 24"><path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"/></svg></div>
+            <div class="logo" aria-label="David Sebastián Díaz - UX/Product Designer"><svg class="icon icon-md" viewBox="0 0 32 32" aria-hidden="true"><defs><linearGradient id="logoGrad1" x1="0%" y1="0%" x2="100%" y2="100%"><stop offset="0%" style="stop-color:#A4D2F4;stop-opacity:1" /><stop offset="100%" style="stop-color:#7CB8E8;stop-opacity:1" /></linearGradient><linearGradient id="logoGrad2" x1="100%" y1="0%" x2="0%" y2="100%"><stop offset="0%" style="stop-color:#A4D2F4;stop-opacity:0.7" /><stop offset="100%" style="stop-color:#5A9FD4;stop-opacity:1" /></linearGradient></defs><g><path d="M 6 8 L 10 5 L 14 8 L 10 11 Z" fill="url(#logoGrad1)" /><path d="M 10 11 L 14 8 L 14 18 L 10 21 Z" fill="url(#logoGrad2)" /><path d="M 18 8 L 22 5 L 26 8 L 22 11 Z" fill="url(#logoGrad1)" opacity="0.9" /><path d="M 22 11 L 26 8 L 26 18 L 22 21 Z" fill="#A4D2F4" opacity="0.5" /><path d="M 10 11 L 14 8 L 22 11 L 18 14 Z" fill="#0D3B66" opacity="0.08" /></g></svg>David Sebastián Díaz<svg style="width: 16px; height: 16px; margin-left: 6px; fill: var(--acento-principal); filter: drop-shadow(0 2px 6px rgba(164,210,244,0.4));" viewBox="0 0 24 24"><path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"/></svg></div>
             
             <button class="menu-toggle" aria-label="Abrir menú" aria-expanded="false">
                 <span></span>
@@ -2929,7 +2929,7 @@
                             <svg style="width: 20px; height: 20px; stroke: #10b981; fill: none; stroke-width: 2.5; flex-shrink: 0; margin-top: 2px;" viewBox="0 0 24 24"><polyline points="8 12 11 15 16 9"></polyline><circle cx="12" cy="12" r="10"></circle></svg>
                             <div>
                                 <strong style="color: var(--texto-principal);">18+ certificaciones</strong><br/>
-                                <span style="font-size: 14px; color: var(--texto-secundario);">Google, IBM, Coursera — <a href="https://www.credly.com/users/david-sebastian-diaz" target="_blank" style="color: var(--acento-principal); text-decoration: underline;">Verificables aquí</a></span>
+                                <span style="font-size: 14px; color: var(--texto-secundario);">Google, IBM, Coursera • UX, Data, Agile, AI</span>
                             </div>
                         </div>
                         <div style="display: flex; align-items: start; gap: 12px;">
@@ -2944,6 +2944,7 @@
                         <a href="https://linkedin.com/in/david-sebastian-diaz" target="_blank" class="btn btn-secondary" style="font-size: 14px; padding: 12px 20px;">LinkedIn</a>
                         <a href="https://github.com/dsd228" target="_blank" class="btn btn-secondary" style="font-size: 14px; padding: 12px 20px;">GitHub</a>
                         <a href="https://dsd228.github.io/dsd228/" target="_blank" class="btn btn-secondary" style="font-size: 14px; padding: 12px 20px;">Portfolio completo</a>
+                        <a href="https://www.credly.com/users/david-sebastian-diaz" target="_blank" class="btn btn-secondary" style="font-size: 14px; padding: 12px 20px;">Certificaciones</a>
                     </div>
                 </div>
             </div>
@@ -5016,7 +5017,7 @@
             </div>
             <div class="footer-col footer-contact">
                 <h3>Contacto</h3>
-                <p style="margin-bottom: 15px; color: var(--texto-secundario); line-height: 1.6;"><strong style="color: var(--acento-principal);">David Díaz</strong><br>Diseñador UX/UI & Consultor E-commerce</p>
+                <p style="margin-bottom: 15px; color: var(--texto-secundario); line-height: 1.6;"><strong style="color: var(--acento-principal);">David Sebastián Díaz</strong><br>Diseñador UX/UI & Consultor E-commerce</p>
                 <a href="mailto:david.diaz.uxdata@gmail.com" style="display: flex; align-items: center; gap: 8px; color: var(--texto-secundario); text-decoration: none; margin-bottom: 10px; transition: color 0.3s;" onmouseover="this.style.color='var(--acento-principal)'" onmouseout="this.style.color='var(--texto-secundario)'">
                     <svg class="icon icon-sm icon-gold" viewBox="0 0 24 24"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
                     <span>david.diaz.uxdata@gmail.com</span>
