--- a/index.html
+++ b/index.html
@@ -2793,7 +2793,7 @@
                     </div>
                 </div>
                 <div class="nav-item">
-                    <a href="https://dsd228.github.io/dsd228/" target="_blank" rel="noopener noreferrer" title="Ver certificaciones y experiencia">
+                    <a href="https://www.credly.com/users/david-sebastian-diaz" target="_blank" rel="noopener noreferrer" title="Ver certificaciones verificadas">
                         <svg style="width: 18px; height: 18px; vertical-align: middle; margin-right: 6px; fill: currentColor;" viewBox="0 0 24 24">
                             <path d="M14,2H6A2,2 0 0,0 4,4V20A2,2 0 0,0 6,22H18A2,2 0 0,0 20,20V8L14,2M18,20H6V4H13V9H18V20M12,19L8,15H10.5V12H13.5V15H16L12,19Z"/>
                         </svg>
