--- a/index.html
+++ b/index.html
@@ -3435,23 +3435,26 @@
 
             <!-- PROYECTOS ADICIONALES DESTACADOS -->
             <div style="margin-top: 60px; padding: 40px; background: linear-gradient(135deg, rgba(164, 210, 244, 0.08), rgba(164, 210, 244, 0.02)); border-radius: 16px; border: 1px solid rgba(164, 210, 244, 0.15);">
-                <h3 style="font-size: 22px; font-weight: 900; color: var(--texto-principal); margin-bottom: 20px;">Otros proyectos destacados:</h3>
+                <h3 style="font-size: 22px; font-weight: 900; color: var(--texto-principal); margin-bottom: 20px;">Otros 30+ proyectos en mi portafolio:</h3>
                 <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); gap: 16px;">
-                    <div style="padding: 16px; background: var(--blanco-puro); border-radius: 12px;">
+                    <div style="padding: 16px; background: var(--blanco-puro); border-radius: 12px; border-left: 4px solid #A4D2F4;">
                         <div style="font-weight: 900; color: var(--texto-principal); margin-bottom: 6px;">School Art Platform</div>
-                        <p style="font-size: 13px; color: var(--texto-secundario); line-height: 1.5; margin: 0 0 8px 0;">Plataforma educativa de arte. Diseño del flujo completo + desarrollo frontend (React).</p>
-                        <div style="font-weight: 700; color: var(--acento-principal); font-size: 12px;">5M+ potencial reach</div>
+                        <p style="font-size: 13px; color: var(--texto-secundario); line-height: 1.5; margin: 0 0 8px 0;">Plataforma educativa de arte. Diseño UX completo + desarrollo frontend React.</p>
+                        <div style="font-weight: 700; color: var(--acento-principal); font-size: 12px;">📊 5M+ potencial reach</div>
                     </div>
-                    <div style="padding: 16px; background: var(--blanco-puro); border-radius: 12px;">
+                    <div style="padding: 16px; background: var(--blanco-puro); border-radius: 12px; border-left: 4px solid #F7C7D2;">
                         <div style="font-weight: 900; color: var(--texto-principal); margin-bottom: 6px;">Fraud Detection System</div>
                         <p style="font-size: 13px; color: var(--texto-secundario); line-height: 1.5; margin: 0 0 8px 0;">Dashboard analytics para detección de fraude. UX/UI research + prototipado.</p>
-                        <div style="font-weight: 700; color: var(--acento-principal); font-size: 12px;">↓72% Falsos positivos</div>
+                        <div style="font-weight: 700; color: #FF6B6B; font-size: 12px;">↓72% Falsos positivos</div>
                     </div>
-                    <div style="padding: 16px; background: var(--blanco-puro); border-radius: 12px;">
+                    <div style="padding: 16px; background: var(--blanco-puro); border-radius: 12px; border-left: 4px solid #FFB800;">
                         <div style="font-weight: 900; color: var(--texto-principal); margin-bottom: 6px;">E-commerce Redesign</div>
-                        <p style="font-size: 13px; color: var(--texto-secundario); line-height: 1.5; margin: 0 0 8px 0;">Plataforma de 50K+ SKUs. Optimización checkout + búsqueda + filtros.</p>
-                        <div style="font-weight: 700; color: var(--acento-principal); font-size: 12px;">+35% Conversión</div>
+                        <p style="font-size: 13px; color: var(--texto-secundario); line-height: 1.5; margin: 0 0 8px 0;">Plataforma 50K+ SKUs. Optimización checkout, búsqueda e información de productos.</p>
+                        <div style="font-weight: 700; color: #22C55E; font-size: 12px;">+35% Conversión</div>
                     </div>
+                </div>
+                <div style="margin-top: 20px; text-align: center;">
+                    <a href="#portafolio" style="display: inline-flex; align-items: center; gap: 8px; padding: 10px 20px; color: var(--acento-principal); text-decoration: none; font-weight: 700; font-size: 14px; border: 2px solid var(--acento-principal); border-radius: 8px; transition: all 0.2s;" onmouseover="this.style.backgroundColor='var(--acento-principal)'; this.style.color='white'" onmouseout="this.style.backgroundColor='transparent'; this.style.color='var(--acento-principal)'">Ver todos los 30+ proyectos →</a>
                 </div>
             </div>
         </div>
